Projects Page edit, Contact Page add & resume add

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <a class="nav-link" href="#projects"><span class="menues">Projects</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> <span class="menues">Contact</span></a>
+                <a class="nav-link" href="#contact"> <span class="menues">Contact</span></a>
+              </li>
+              <a href="./My-CV.png" style="text-decoration: none;"><li class="nav-item"><button class="btn-grad-res resume-btn">Resume</button></a>
               </li>
             </ul>
 
@@ -59,7 +61,7 @@
     </div>
 
 
-    <div class="intro-sec">
+    <div class="intro-sec" id="home">
       <div class="intro-div">
         <div class="accont-links">
           <div class="accont-links-div">
@@ -104,12 +106,14 @@
         </div>
 
         <div class="intro-para">
-          <p style="color: rgb(45, 45, 255); font-size: larger ;" id="home">Hi, my name is</p>
+          <p style="color: rgb(45, 45, 255); font-size: larger ;" >Hi, my name is</p>
           <h1 class="heading-1 typewriter">Taha Bin Shafiq.</h1>
           <h1 class="heading-1">I design responsive and user-friendly websites.</h1>
-          <p class="para-1" style="padding-left: 4px;">I'm a dedicated front-end developer with experience in building <br> responsive websites
+          <p class="para-1" style="padding-left: 4px;">I'm a dedicated front-end developer with experience in building
+            <br> responsive websites
             using HTML, CSS, JavaScript, and Bootstrap. <br> I focus on creating user-friendly interfaces and
             interactive designs.</p>
+             <a href="./My-CV.png" style="text-decoration: none;"><button class="btn-grad resume-btn display-top-res-btn">Resume</button></a>
         </div>
       </div>
 
@@ -118,24 +122,31 @@
         <div class="img-div-2"></div>
       </div>
     </div>
-
+    <br>
+    <br>
+    <br>
     <div class="about-main">
       <div class="about-sec">
         <h1 class="about-h1" id="about">About Me</h1>
         <h4 style="margin-top: 40px;" class="heading-small">Hello!</h4>
-        <p class="para-1">My name is <strong>Muhammad Taha</strong>, a second-year <strong>Pre-Medical </strong> student with a growing passion for programming. I am
-          currently studying <strong>Introduction to Programming</strong> through the <strong>Saylani Mass IT Training Program</strong>, where I am
+        <p class="para-1">My name is <strong>Muhammad Taha</strong>, a second-year <strong>Pre-Medical </strong> student
+          with a growing passion for programming. I am
+          currently studying <strong>Introduction to Programming</strong> through the <strong>Saylani Mass IT Training
+            Program</strong>, where I am
           building a strong foundation in web development.</p>
-          <p class="para-1">I have been exploring  <strong>front-end technologies like HTML, CSS, and JavaScript</strong> to create responsive and user-friendly websites. Alongside my academic pursuits, I enjoy learning how technology can be used to solve real-world problems.</p>
-          <p class="para-1">Currently, I am focusing on enhancing my <strong>programming skills </strong> and working on exciting web development projects to expand my knowledge and expertise.</p>
-          <p class="para-1">Here are some technologies I’ve been working with recently:</p>
+        <p class="para-1">I have been exploring <strong>front-end technologies like HTML, CSS, and JavaScript</strong>
+          to create responsive and user-friendly websites. Alongside my academic pursuits, I enjoy learning how
+          technology can be used to solve real-world problems.</p>
+        <p class="para-1">Currently, I am focusing on enhancing my <strong>programming skills </strong> and working on
+          exciting web development projects to expand my knowledge and expertise.</p>
+        <p class="para-1">Here are some technologies I’ve been working with recently:</p>
 
-          <ul class="para-1">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Bootstrap</li>
-          </ul>
+        <ul class="para-1">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Bootstrap</li>
+        </ul>
       </div>
       <div class="about-img">
         <div class="second-img"></div>
@@ -145,39 +156,98 @@
     <br>
     <br>
     <br>
-  
+
     <h1 class="about-h1" id="projects" style="margin-left: 100px;">My Projects</h1>
     <br>
-  <div class="project-div">
-      <a href="https://tahabinshafiq.github.io/Expertizo-Clone-CSS-Assignment/" class="projects"><div class="card"><img src="./Expertizo-img-.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">Expertizo Clone <div></div></h4>
-        <p class="para-2">This is an academic project developed as part of my programming course. It demonstrates a responsive design and basic functionality for a service marketplace website.</p>
-      </div></a>
+    <div class="project-div">
+      <a href="https://tahabinshafiq.github.io/Expertizo-Clone-CSS-Assignment/" class="projects">
+        <div class="card"><img src="./Expertizo-img-.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <h4 class="heading-2 underline-2">Expertizo Clone </h4>
+          <p class="para-2">This is an academic project developed as part of my programming course. It demonstrates a
+            responsive design and basic functionality for a service marketplace website.</p>
+        </div>
+      </a>
 
 
-      <a href="https://tahabinshafiq.github.io/Food-Panda-Clone-CSS-Assignment/" class="projects"><div class="card"><img src="./Food-Panda-img-.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">Food Panda Clone <span style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px;">Not Responsive</span> <div></div></h4>
-        <p class="para-2">This project is a clone of Foodpanda, developed to practice front-end skills. It features a responsive layout and a basic structure for showcasing food delivery services.</p>
-      </div></a>
+      <a href="https://tahabinshafiq.github.io/Food-Panda-Clone-CSS-Assignment/" class="projects">
+        <div class="card"><img src="./Food-Panda-img-.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <div style="display: flex; gap: 15px; align-items:center; font-weight: 500;">
+            <h4 class="heading-2 underline-2">Food Panda Clone</h4><span
+              style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px;">Not
+              Responsive</span>
+          </div>
+          <div></div>
+          <p class="para-2">This project is a clone of Foodpanda, developed to practice front-end skills. It features a
+            responsive layout and a basic structure for showcasing food delivery services.</p>
+        </div>
+      </a>
 
-      <a href=" https://tahabinshafiq.github.io/Airbnb-CSS-Assignment-5/" class="projects"><div class="card"><img src="./Air-bnb-img-.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">Airbnb Clone <span style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px;">Not Responsive</span> <div></div></h4>
-        <p class="para-2">This project is a clone of Airbnb, created to enhance my web development skills. It includes a responsive design and a basic layout for showcasing rental properties and services.</p>
-      </div></a>
+      <a href=" https://tahabinshafiq.github.io/Airbnb-CSS-Assignment-5/" class="projects">
+        <div class="card"><img src="./Air-bnb-img-.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <div style="display: flex; gap: 20px; align-items: center;">
+            <h4 class="heading-2 underline-2">Airbnb Clone</h4> <span
+              style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px; font-weight: 500;">Not
+              Responsive</span>
+          </div>
+          <p class="para-2">This project is a clone of Airbnb, created to enhance my web development skills. It includes
+            a responsive design and a basic layout for showcasing rental properties and services.</p>
+        </div>
+      </a>
 
-      <a href="https://tahabinshafiq.github.io/Saylani-Log-in-Page-Assignment/" class="projects"><div class="card"><img src="./Syalani-login-.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">Syalani Login Page <div></div></h4>
-        <p class="para-2">This is a login page designed for practice as part of my programming course. It includes a responsive layout and JavaScript functionality to validate email and password inputs.</p>
-      </div></a>
+      <a href="https://tahabinshafiq.github.io/Saylani-Log-in-Page-Assignment/" class="projects">
+        <div class="card"><img src="./Syalani-login-.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <h4 class="heading-2 underline-2">Saylani Login Page <div></div>
+          </h4>
+          <p class="para-2">This is a login page designed for practice as part of my programming course. It includes a
+            responsive layout and JavaScript functionality to validate email and password inputs.</p>
+        </div>
+      </a>
 
-      <a href="https://tahabinshafiq.github.io/Cities-Checker-js/" class="projects"><div class="card"><img src="./City-Checker-img.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">City Checker<div></div></h4>
-        <p class="para-2">This project identifies the cleanest city in Pakistan using JavaScript. A simple button triggers the result display, demonstrating basic logic implementation and interactivity.</p>
-      </div></a>
+      <a href="https://tahabinshafiq.github.io/Cities-Checker-js/" class="projects">
+        <div class="card"><img src="./City-Checker-img.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <h4 class="heading-2 underline-2">City Checker<div></div>
+          </h4>
+          <p class="para-2">This project identifies the cleanest city in Pakistan using JavaScript. A simple button
+            triggers the result display, demonstrating basic logic implementation and interactivity.</p>
+        </div>
+      </a>
 
-      <a href=" https://tahabinshafiq.github.io/CSS-Facebook-Login-Page-Assignment/" class="projects"><div class="card"><img src="./Facebook-login-page-.png" alt="" height="180px"></div> <div class="card-info"><h4 class="heading-2">Facebook Login Page <div><div style="margin-left: 60px;"><span style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px; " >Not Responsive</span></div></div></h4>
-        <p class="para-2">This project is a static clone of Facebook's login page, created to practice HTML and CSS. It features a responsive design with a focus on layout accuracy and styling.</p>
-      </div></a>
+      <a href=" https://tahabinshafiq.github.io/CSS-Facebook-Login-Page-Assignment/" class="projects">
+        <div class="card"><img src="./Facebook-login-page-.png" alt="" height="180px"></div>
+        <div class="card-info">
+          <h4 class="heading-2 underline-2">Facebook Login Page</h4>
+          <div>
+            <div><span
+                style="font-size: 15px; background-color: rgb(4, 4, 114); color: white; border-radius: 10px; padding: 5px; font-weight: 500;">Not
+                Responsive</div>
+          </div>
+          <p class="para-2">This project is a static clone of Facebook's login page, created to practice HTML and CSS.
+            It features a responsive design with a focus on layout accuracy and styling.</p>
+        </div>
+      </a>
     </div>
 
 
+    <div class="contact-section">
+      <div style="color: rgb(45, 45, 255);" class="about-media">What's Next</div>
+      <div class="about-media">
+        <h1 class="heading-2">Get In Touch</h1>
+      </div>
+      <div>I’m currently looking for a remote job or any new opportunities. </div>
+        <div>Whether you have a project to discuss or just want to say hi, my inbox is open for </div>
+        <div  class="about-media"> all!</div>
+      <div class="about-media" id="contact"> <a href="mailto:mt4899192@gmail.com" style="text-decoration: none;"><button class="btn-grad">Message Me</button></a></div>
+    </div>
+    <div class="copy-right" style="text-align: center; color: rgb(0, 0, 143); padding-bottom: 10px;">Design and Built by <strong> <u>Taha Bin Shafiq.</u></strong></div>
 
-    
+
+
+
   </div>
 
 </body>
