Mail change & nav add property space between

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div style="max-width:1300px; margin: 0px auto;" class="first-div">
     <div class="header">
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg d-flex justify-content-between">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" id="">
             <div style="display: flex; align-items: center; margin-left: 10px ;" class="underline">
@@ -37,7 +37,7 @@
 
           <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 list">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 list">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#home"> <span class="menues">Home</span></a>
               </li>
@@ -243,7 +243,7 @@
       <div class="contact-para">Whether you have a project to discuss or just <span class="span-2"> want to say hi, my
           inbox is open for</span> </div>
       <div class="about-media"> all!</div>
-      <div class="about-media" id="contact"> <a href="mailto:mt4899192@gmail.com" style="text-decoration: none;"><button
+      <div class="about-media" id="contact"> <a href="muhammadtahaaa7@gmail.com" style="text-decoration: none;"><button
             class="btn-grad">Message Me</button></a></div>
     </div>
     <div class="copy-right" style="text-align: center; color: rgb(0, 0, 143); padding-bottom: 10px;">Design and Built by
