--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="contact-para">Whether you have a project to discuss or just <span class="span-2"> want to say hi, my
           inbox is open for</span> </div>
       <div class="about-media"> all!</div>
-      <div class="about-media" id="contact"> <a href="muhammadtahaaa7@gmail.com" style="text-decoration: none;"><button
+      <div class="about-media" id="contact"> <a href="Mailto:muhammadtahaaa7@gmail.com" style="text-decoration: none;"><button
             class="btn-grad">Message Me</button></a></div>
     </div>
     <div class="copy-right" style="text-align: center; color: rgb(0, 0, 143); padding-bottom: 10px;">Design and Built by
