Change title name & TBS logo add this abbrivation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Taha Bin Shafiq|Front-End Developer</title>
   <link rel="website icon" type="png" href="./Logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#" id="">
             <div style="display: flex; align-items: center; margin-left: 10px ;" class="underline">
-              <div style="margin-top: px;"><span class="main-logo">TBS</span></div>
+              <div style="margin-top: px;"><span class="main-logo"> <abbr style="text-decoration: none; cursor: pointer;" title="Taha Bin Shafiq">TBS</abbr></span></div>
               <div><span class="logo">Taha Bin Shafiq</span></div>
             </div>
           </a>
