--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taha Bin Shafiq|Front-End Developer</title>
+  <title>Taha-Bin-Shafiq | Front-End Developer</title>
   <link rel="website icon" type="png" href="./Logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
