--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Phudu:wght@300..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="body">
@@ -96,18 +100,29 @@
                   fill="rgb(48, 48, 252)" />
               </svg></a>
           </div>
+
+          <div class="mail-div" ><a href="mailto:muhammadtahaaa7@gmail.com" class="stick-3">muhammadtahaaa7@gmail.com</a>
+          </div>
+          <div class="bowl-2">
+          </div>
+          <div class="bowl">
+          </div>
+          <div class="stick">
+          </div>
+          <div class="stick-2">
+          </div>
         </div>
 
         <div class="intro-para">
           <p style="color: rgb(45, 45, 255); font-size: larger ;">Hi, my name is</p>
-          <h1 class="heading-1 typewriter">Taha Bin Shafiq.</h1>
-          <h1 class="heading-1">I design responsive and user-friendly websites.</h1>
+          <h1 class="heading-1"> <span class="typewriter">Taha Bin Shafiq.</span></h1>
+          <h1 class="heading-3">I design responsive and user-friendly websites.</h1>
           <p class="para-1" style="padding-left: 4px;">I'm a dedicated front-end developer with experience in building
             <br> responsive websites
             using HTML, CSS, JavaScript, and Bootstrap. <br> I focus on creating user-friendly interfaces and
             interactive designs.
           </p>
-          <a href="./My-CV.png" style="text-decoration: none;"><button
+          <a href="./My-CV.png" style="text-decoration: none;" class="display-top-res-btn"><button
               class="btn-grad resume-btn display-top-res-btn">Resume</button></a>
         </div>
       </div>
